# TitanRover2019

./: .gitignore  LICENSE  README.md  rover.sqlite3
#catkin_ws/: .hector.rviz.swp  csuf.yaml
#catkin_ws/src/multijoy/: CMakeLists.txt  generate.py
#catkin_ws/src/multijoy/launch/: multijoy2.launch
Cerium/: README.txt  appbaseESC.py  cer.css  cerium.html  runCerium.sh  startup.sh  style.css
Cerium/res/: style.css
arduino/leds/: leds.ino
catkin_ws/: base_multicore.sh
catkin_ws/src/: map_provider.launch
catkin_ws_OLD/: runCerium.sh
catkin_ws_OLD/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws_OLD/src/multijoy/: LICENSE  README.md  package.xml
catkin_ws_OLD/src/multijoy/msg/: MultiJoy.msg
catkin_ws_OLD/src/multijoy/scripts/: multijoy_node.py
communications/: relay.old
communications/relay/: duprec.py  dupsend.py  mhzRx.py  relay.py  spread.sh
controls/: README.md  sample.py  traverse.py
controls/arm/: README.md  armdemo.py  main.py  pyarm.py
controls/config/: rumblepad.txt
controls/drive/: mobility.py
controls/mobility/: README.md  baseESC.py  baseESC.sh  (+2 more)
controls_OLD/: roverTx2Setup.txt
gpio/: README.md  tx2gpio.py
nvidia@192.168.1.2/: appbaseESC.py
ros/: READ.md  README.md  base_multicore.sh  publisher_example.py  relay.py
ros_OLD/: README.md
science/: mLight.py  rgb_anal.py
slam/: Slamarray.py  Untitled-1  lidar.py  lidarclient.py  lidarserver.py  mapdraw.py  pathfile.txt  rover.sqlite3  scout.py  scoutfile.txt  scoutfile2.txt  slam_gps.py  slam_mapping.py
userInterface/: Motion.ui  heading.py  main.py
(+265 files in other folders)
