<?xml version="1.0"?>
<package format="2">
  <name>multijoy</name>
  <version>0.0.0</version>
  <description>The multijoy package</description>
  <maintainer email="chris.mower@ed.ac.uk">Chris E. Mower</maintainer>
  <author email="chris.mower@ed.ac.uk">Chris E. Mower</author>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/multijoy</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export></export>
</package>
